@@ -736,7 +736,9 @@ class TestExpectations:
     def _report_errors(self):
         errors = []
         warnings = []
-        for lineno, expectation in enumerate(self._expectations, start=1):
+        lineno = 0
+        for expectation in self._expectations:
+            lineno += 1
             for error in expectation.errors:
                 errors.append("Line:%s %s %s" % (lineno, error, expectation.name if expectation.expectations else expectation.comment))
             for warning in expectation.warnings:
@@ -787,7 +789,9 @@ class TestExpectations:
             ModifiersAndExpectations(modifiers, expectations))
 
     def _add_expectations(self, expectation_list, overrides_allowed):
-        for lineno, expectation in enumerate(expectation_list, start=1):
+        lineno = 0
+        for expectation in expectation_list:
+            lineno += 1
             expectations = expectation.expectations
 
             if not expectation.expectations:
